--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-
+<font face="Comic Sans MS">
+ &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width, initial-scale=1.0&quot;&gt;
+</font>
+<br><br>
+ 
 <table>
 <tr>
 <td><a href="http://man.openbsd.org/">index-original</a></td>
