--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-<font face="Comic Sans MS">
- &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width, initial-scale=1.0&quot;&gt;
-</font>
+
+<tt> &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width, initial-scale=1.0&quot;&gt;</tt>
 <br><br>
  
 <table>
@@ -35,5 +34,14 @@
 </tr>
 </table>
 
+ My test results:<br>
+- Microsoft Edge on Windows 10 Mobile (phone): significant improvement<br>
+<br>
+- Chrome on OpenBSD-current: unaffected<br>
+- Firefox on OpenBSD-current: unaffected<br>
+- Lynx on OpenBSD-current: unaffected<br>
+- Microsoft Edge on Windows 10: unaffected<br>
+- Internet Explorer on Windows 10: unaffected<br>
+ 
 </body>
 </html>
