--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 <td><a href="https://viewports.github.io/man/syspatch-viewport.png">syspatch-viewport-png</a></td>
 </tr>
 </table>
-
- My test results:<br>
+<br><br>
+ <b>Test results:</b><br><br>
 - Microsoft Edge on Windows 10 Mobile (phone): significant improvement<br>
 <br>
 - Chrome on OpenBSD-current: unaffected<br>
