--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 <br>
 - Chrome on OpenBSD-current: unaffected<br>
 - Firefox on OpenBSD-current: unaffected<br>
+- Dillo on OpenBSD-current: unaffected<br>
 - Lynx on OpenBSD-current: unaffected<br>
 - Microsoft Edge on Windows 10: unaffected<br>
 - Internet Explorer on Windows 10: unaffected<br>
