--- a/man2/pf.html
+++ b/man2/pf.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/mandoc.css" type="text/css" media="all">
+  <link rel="stylesheet" href="mandoc.css" type="text/css" media="all">
   <title>pf(4) - OpenBSD manual pages</title>
 </head>
 <body>
