--- a/man2/syspatch.html
+++ b/man2/syspatch.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8"/>
-  <link rel="stylesheet" href="/mandoc.css" type="text/css" media="all">
+  <link rel="stylesheet" href="mandoc.css" type="text/css" media="all">
   <title>syspatch(8) - OpenBSD manual pages</title>
 </head>
 <body>
