--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+https://viewports.github.io/man/sidebyside.html<html>
 <head>
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -43,6 +43,12 @@
 - Lynx on OpenBSD-current: unaffected<br>
 - Microsoft Edge on Windows 10: unaffected<br>
 - Internet Explorer on Windows 10: unaffected<br>
+
+<br><br>
+ 
+ <a href="https://viewports.github.io/man/sidebyside.html">https://viewports.github.io/man/sidebyside.html</a><br>
+ <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fviewports.github.io%2Fman%2Fafterboot">https://validator.w3.org/nu/?doc=https%3A%2F%2Fviewports.github.io%2Fman%2Fafterboot</a>
+ 
  
 </body>
 </html>
