--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-https://viewports.github.io/man/sidebyside.html<html>
+<html>
 <head>
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
