--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <br><br>
  <b>Test results:</b><br><br>
 - Microsoft Edge on Windows 10 Mobile (phone): significant improvement<br>
-- Opera on iOS 4.2.1: very significant improvement<br>
+- Opera on iOS 4.2.1: significant improvement<br>
 <br>
 - Chrome on OpenBSD-current: unaffected<br>
 - Firefox on OpenBSD-current: unaffected<br>
