--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
 <br><br>
  
  <a href="https://viewports.github.io/man/sidebyside.html">https://viewports.github.io/man/sidebyside.html</a><br>
- <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fviewports.github.io%2Fman%2Fafterboot">https://validator.w3.org/nu/?doc=https%3A%2F%2Fviewports.github.io%2Fman%2Fafterboot</a>
+ <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fviewports.github.io%2Fman%2Fafterboot">https://validator.w3.org/nu/?doc=https%3A%2F%2Fviewports.github.io%2Fman%2Fafterboot</a><br>
+ <a href="https://html5.validator.nu/?doc=https%3A%2F%2Fviewports.github.io%2Fman%2Fafterboot">https://html5.validator.nu/?doc=https%3A%2F%2Fviewports.github.io%2Fman%2Fafterboot</a>
  
  
 </body>
