--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
  <b>Test results:</b><br><br>
 - Microsoft Edge on Windows 10 Mobile (phone): significant improvement<br>
 - Opera on iOS 4.2.1: significant improvement<br>
+- Safari on iOS 4.2.1: significant improvement<br>
 <br>
 - Chrome on OpenBSD-current: unaffected<br>
 - Firefox on OpenBSD-current: unaffected<br>
