--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
 </table>
 <br><br>
  <b>Test results:</b><br><br>
-- Microsoft Edge on Windows 10 Mobile (phone): significant improvement<br>
-- Opera on iOS 4.2.1: significant improvement<br>
-- Safari on iOS 4.2.1: significant improvement<br>
+- Microsoft Edge on Windows 10 Mobile (phone): improvemed<br>
+- Internet Explorer on Windows Phone 8.1: improvemed<br>
+- Opera on iOS 4.2.1: improvemed<br>
+- Safari on iOS 4.2.1: improvemed<br>
+
 <br>
 - Chrome on OpenBSD-current: unaffected<br>
 - Firefox on OpenBSD-current: unaffected<br>
