--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 </table>
 <br><br>
  <b>Test results:</b><br><br>
-- Microsoft Edge on Windows 10 Mobile (phone): improvemed<br>
-- Internet Explorer on Windows Phone 8.1: improvemed<br>
-- Opera on iOS 4.2.1: improvemed<br>
-- Safari on iOS 4.2.1: improvemed<br>
+- Microsoft Edge on Windows 10 Mobile (phone): improved<br>
+- Internet Explorer on Windows Phone 8.1: improved<br>
+- Opera on iOS 4.2.1: improved<br>
+- Safari on iOS 4.2.1: improved<br>
 
 <br>
 - Chrome on OpenBSD-current: unaffected<br>
