--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
  <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fviewports.github.io%2Fman%2Fafterboot">https://validator.w3.org/nu/?doc=https%3A%2F%2Fviewports.github.io%2Fman%2Fafterboot</a><br>
  <a href="https://html5.validator.nu/?doc=https%3A%2F%2Fviewports.github.io%2Fman%2Fafterboot">https://html5.validator.nu/?doc=https%3A%2F%2Fviewports.github.io%2Fman%2Fafterboot</a>
  
+ <b><a href="https://marc.info/?l=openbsd-misc&m=152665457925541&w=2">https://marc.info/?l=openbsd-misc&m=152665457925541&w=2</a></b>
+
+ 
  
 </body>
 </html>
