--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 - Internet Explorer on Windows 10: unaffected<br>
 
 <br><br>
- 
+<a href="https://viewports.github.io/man/sidebyside.html">https://viewports.github.io/man/sidebyside.html</a>
 <b><a href="https://marc.info/?l=openbsd-misc&m=152665457925541&w=2">https://marc.info/?l=openbsd-misc&m=152665457925541&w=2</a></b>
 
  
