--- a/httpd-cvsweb-iked.html
+++ b/httpd-cvsweb-iked.html
@@ -1,7 +1,7 @@
 <html><body bgcolor=gray>
 
 <img src="https://viewports.github.io/httpd/httpd.png" width="40%"/>
-<img src="https://viewports.github.io/httpd/httpd-viewport.png" width="40%"/>
+<img src="https://viewports.github.io/httpd/httpd_viewport.png" width="40%"/>
 
 <br><br>
 
