--- a/httpd-cvsweb-iked.html
+++ b/httpd-cvsweb-iked.html
@@ -1,4 +1,10 @@
-<html><body bgcolor=gray>
+<html>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+</head>
+  
+  
+<body bgcolor=gray>
 
 <img src="https://viewports.github.io/httpd/httpd.png" width="40%"/>
 <img src="https://viewports.github.io/httpd/httpd_viewport.png" width="40%"/>
