--- a/marc/index.html
+++ b/marc/index.html
@@ -4,6 +4,7 @@
 </head>
   
 <body bgcolor=gray>
+  <tt> &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width, initial-scale=1.0&quot;&gt;</tt><br><br>
 
 <img src="message.png" width="45%"/>
 <img src="message_viewport.png" width="45%"/>
