--- a/pinboard/index.html
+++ b/pinboard/index.html
@@ -3,8 +3,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 </head>
   
-<body bgcolor=gray>
-  <div bgcolor=white><tt> &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width, initial-scale=1.0&quot;&gt;</tt></div><br><br>
+<body bgcolor=lightgray>
+<tt> &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width, initial-scale=1.0&quot;&gt;</tt><br><br>
 
 <img src="add.png" width="45%"/>
 <img src="add_viewport.png" width="45%"/>
